[package]
name = "csgo-gsi-builder"
version = "0.1.0"
edition = "2021"

[features]
default = []
auto_install = ["steamlocate"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
vdf-serde = "0.3.0"

steamlocate = { version = "1.1.0", optional = true }
