[package]
name = "csgo-gsi-builder"
description = "Build CSGO Game State Integration config files"
version = "0.1.0"
authors = ["Benjamin DIDIER <contact@aziks.aleeas.com>"]
repository = "https://github.com/Aziks0/csgo-gsi-builder"
license = "MPL-2.0"
keywords = ["csgo"]
edition = "2021"

[features]
default = []
auto_install = ["steamlocate"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
vdf-serde = "0.3.0"

steamlocate = { version = "1.1.0", optional = true }
